crates/rstest-bdd-macros/tests/fixtures/scenario_missing_step_warning.stderr
warning: step registry has no definitions for crate ID '$CRATE'. This may indicate a registry issue.
 --> tests/fixtures/scenario_missing_step_warning.rs:3:1
  |
3 | #[scenario(path = "../../../../crates/rstest-bdd-macros/tests/features/unmatched.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this warning originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)

error: forced failure
 --> tests/fixtures/scenario_missing_step_warning.rs:7:1
  |
7 | compile_error!("forced failure");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
